# HST-Metadata

./: .gitignore  Catalog-Date-Problem.txt  HPM-gdk-pixbuf-issues-after-updates.md  HSTL Photo Metadata Process.md  Image Metadata Standards Explained.odt  MIGRATION-README.md  Metadata Embedding Procedures Using Exiftool-2019-12-12.docx  Metadata_ Where and what to save.html  README.md  Starup-msg.txt  Unsaved Document 1  What are image metadata (EXIF, IPTC, XMP)_2.otg  What is EXIF, IPTC and XMP metadata.odt  list.txt  menu.py  pdb-metadata.py  write.py
Audio/: Read.me  (+4 more)
Version-2/Framework/: .coverage  .gitignore  AGENTS.ini  CHANGELOG.md  DEVELOPMENT_PLAN.md  FIX_HPM-GitHub-download-problem-solved.md  GUI_QUICKSTART.md  HPM.desktop  HPM.spec  HPM_Installation.md  HSTL_Photo_Framework_GUI.spec  PHASE1_CHANGELOG.md  Project_Rules.md  QUICKFIX_EXIFTOOL.md  README.md  REGRESSION_TEST_SUITE_REPORT.md  WARP.ini  __init__.py  build_exe.ps1  create_desktop_shortcut.py  file_manager.py  g2c.py  generate_version_info.py  hpm.bat  hpm2  hstl_framework.py  icon_loader.py  pyproject.toml  release.bat  requirements.txt  run.ps1  test_menu_theme.py  version_info.txt  version_update_summary.md
Version-2/Framework/Google_form/: README_DEPRECATION.md
Version-2/Framework/archive/: FIX_Google-Sheet-Auth-problem.md
Version-2/Framework/config/: config_manager.py  settings.py
Version-2/Framework/core/: __init__.py  delivery_service.py  pipeline.py
Version-2/Framework/docs/: ANALYSIS_HPM-detected-LSP-errors-oc.md  DATA_DICTIONARY.md  DEVELOPMENT_PLAN.md  GLOSSARY.md  GLOSSARY_PLAN.md  GUI_QUICKSTART.md  PLAN_HPM-Final-Product-Delivery-Test-Suite.md  PLAN_HPM-Final-Product-Delivery-oc.md  QUICKSTART.md  RELEASE_NOTES_v0.0.1.md  RELEASE_NOTES_v0.1.3.md  SOFTWARE_ARCHITECTURE.md  Standard Directory Structure.txt  USER_GUIDE.md  What is the cp65001 character set.txt
Version-2/Framework/gui/: Python_Files_Documentation-2.md  README.md  __init__.py  hstl_gui.py  main_window.py  zoom_manager.py
Version-2/Framework/launcher/: HPM Launcher.lnk  INSTALL.ps1  LAUNCHER_README.md  WinPythons_activate-bat_explained.md  _temp_launcher.bat  build_launcher.bat  create_icon.py  create_shortcut.ps1  launcher.py
Version-2/Framework/notes/: ANALYSIS_16-to-8-bit-TIFF-conversion.txt  BitPerSample-test.txt  Blue-message-of-death-LAAs-system.txt  CRITIQUE-of-PLAN_Zoom-in-out-feature.md  CRITIQUE_g2c-py_CONSENSUS.md  CRITIQUE_g2c-py_by_ChatGPT.md  CRITIQUE_g2c-py_by_claude.md  CRITIQUE_g2c-py_by_gemini.md  CRITIQUE_g2c-py_by_qwen.md  HPM-187-missing-ftfy-module.txt  HPM_Installation.md  PLAN_HPM-Color-Coding-Messages-G.md  PLAN_HPM-Logging-Enhancement-v2.md  PLAN_HPM-Sigstore-GitHub-implementation.md  PLAN_HPM-partial-date-modifications-to-Date-Create-w-Claudes-edits.md  PLAN_HPM-partial-date-modifications-to-Date-Create.md  PROMPT_Help-failover-to-online-version.txt  REPORT_requirements-txt_review.md  Reveiw-of-PLAN_HPM-Final-Product-Delivery-oc.md  TABLE_Batch-Files2.csv  TIFF_16-to-8bit-dpi-discrepancy.md  When Microsoft Defender Goes Crazy.md  Why HPMexe download works from Google and not from GitHub.md  fw_notes.txt  g2c.py-dynamic-header-rows.txt  new 9.txt
Version-2/Framework/portable/: CROSS_PLATFORM_STRATEGY.md  Hermetic Toolchain explained.md  INFO_pip-in-winpython-issues.md  LAUNCH_HPM_PORTABLE.bat  LINUX_WORKFLOW_CHEATSHEET.md  PyGit - a Python Git cloning program.md  PyGitClone.py  QUICK_START.md  README.md  (+2 more)
(+987 files in other folders)
